# ai-cohost

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  live-stream-simulator.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml  seed.py
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/scripts/: backfill_self_replies.py  reclassify_skipped_questions.py
apps/api/tests/: test_analytics.py  test_auth_utils.py  test_auto_reply.py  test_classifier_intent_routing.py  test_comment_classifier.py  test_config.py  test_insights_orchestration.py  test_migrations_check.py  test_otp.py  test_products_schema.py  test_route_slashes.py  (+7 more)
apps/extension/: manifest.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/workers/: celery_app.py  config.py  pyproject.toml
apps/workers/dh_providers/: __init__.py  base.py  heygen.py  liteavatar.py  router.py
apps/workers/seeds/: script_samples.py
apps/workers/tasks/: embed.py  llm.py  media.py  script.py  usage.py
apps/workers/tests/: conftest.py  test_dh_providers.py  test_llm_ordering.py
docs/: AI-Cohost-System-Design.md  feature-prompts.md  local-test-report.md  setup-guide.docx  setup-guide.md  verification-report-2026-04-11.md  verification-report.md
infra/compose/: docker-compose.dev.yml
infra/docker/: init-extensions.sql
services/lite-avatar-worker/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  requirements.txt  storage.py  tts.py  worker.py
(+101 files in other folders)
